--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -160,11 +160,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_regular"
-                    android:layout_marginTop="50dp"
+                    android:layout_marginTop="40dp"
                     android:text="Verify Account"
                     android:gravity="center"
                     android:textColor="@color/blue"
-                    android:textSize="20dp"
+                    android:textSize="18dp"
 
                     android:textStyle="bold" />
 
@@ -176,13 +176,14 @@
                     android:text="Reset Password"
                     android:gravity="center"
                     android:textColor="@color/blue"
-                    android:textSize="20dp"
+                    android:textSize="18dp"
                     android:textStyle="bold" />
 
                 <Button
                     android:id="@+id/saveChangesBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
                     android:text="Save changes"
                     android:layout_gravity="center"
                     android:visibility="invisible" />
